06_alocacao_dinamica/01_geral/aloc_04/Resultados/Maria/utils_char2/result_compilation.txt
utils_char2.c: In function ‘LeVetor’:
utils_char2.c:68:9: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
   68 |         if(c == '\n');
      |         ^~
utils_char2.c:69:13: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   69 |             break;
      |             ^~~~~
utils_char2.c:73:48: error: passing argument 2 of ‘AumentaTamanhoVetor’ makes integer from pointer without a cast [-Wint-conversion]
   73 |             vetor = AumentaTamanhoVetor(vetor, tamanho);
      |                                                ^~~~~~~
      |                                                |
      |                                                int *
utils_char2.c:73:48: note: possible fix: dereference with ‘*’
   73 |             vetor = AumentaTamanhoVetor(vetor, tamanho);
      |                                                ^~~~~~~
      |                                                *
utils_char2.c:35:44: note: expected ‘int’ but argument is of type ‘int *’
   35 | char *AumentaTamanhoVetor(char* vetor, int tamanhoantigo)
      |                                        ~~~~^~~~~~~~~~~~~
